# fraction

./: CMakeLists.txt  LICENSE.txt  README.md  fraction.cpp
examples/sandbox/: main.cpp
include/fraction/: fraction.hpp
src/fraction/: fraction.cpp
